# MindPrint

./: .gitignore  EXPLAIN.md  README.md  SUBMISSION.md  THREAT_MODEL.md  pyproject.toml
demo/: NOTEBOOKLM_SCRIPT.md  run_demo.py  subnet_full.py  subnet_sim.py  tui.py
mindprint/: __init__.py  config.py  extractor.py  snapshot.py
mindprint/bittensor/: __init__.py  miner.py  protocol.py  validator.py
mindprint/proof/: __init__.py  codec.py  mindprint.py  verify.py
tests/: conftest.py  test_bittensor.py  test_proof.py
